crates/lash/tests/ui/model_selection_requires_variant.stderr
error[E0308]: mismatched types
 --> tests/ui/model_selection_requires_variant.rs:2:46
  |
2 |     let _ = lash::LashCore::standard().model("model-only");
  |                                        ----- ^^^^^^^^^^^^ expected `ModelSpec`, found `&str`
  |                                        |
  |                                        arguments to this method are incorrect
  |
note: method defined here
 --> src/core.rs
  |
  |     pub fn model(mut self, model: lash_core::ModelSpec) -> Self {
  |            ^^^^^

error[E0599]: no method named `model_variant` found for struct `LashCoreBuilder` in the current scope
 --> tests/ui/model_selection_requires_variant.rs:3:40
  |
3 |     let _ = lash::LashCore::standard().model_variant("low");
  |                                        ^^^^^^^^^^^^^ method not found in `LashCoreBuilder`

error[E0308]: mismatched types
 --> tests/ui/model_selection_requires_variant.rs:7:27
  |
7 |     let _ = builder.model("model-only");
  |                     ----- ^^^^^^^^^^^^ expected `ModelSpec`, found `&str`
  |                     |
  |                     arguments to this method are incorrect
  |
note: method defined here
 --> src/turn.rs
  |
  |     pub fn model(mut self, model: ModelSpec) -> Self {
  |            ^^^^^
